feat: add edge feature support for pipeline e2e tests
- Add edge feature to reth-node-ethereum that propagates to provider/stages/db-common
- Add edge feature to reth-stages that enables rocksdb
- Fix test utils to keep RocksDB temp directory alive during tests
- Add tempfile as optional dependency for test-utils in reth-provider

--- a/crates/ethereum/node/Cargo.toml
+++ b/crates/ethereum/node/Cargo.toml
@@ -123,3 +123,8 @@ test-utils = [
     "reth-evm-ethereum/test-utils",
     "reth-stages-types/test-utils",
 ]
+edge = [
+    "reth-provider/edge",
+    "reth-stages/edge",
+    "reth-db-common/edge",
+]
