feat(changeset-bench): add TxHashNumbers benchmark support
- Add --bench-type flag: 'changeset' (default) or 'txhash'
- Add --datadir flag for single-datadir benchmarks (txhash uses same DB with settings override)
- Support StorageSettingsCache override to test MDBX vs RocksDB on same datadir
- Ensure unique queries (samples >= queries) for accurate benchmarking
- Rename modes for clarity: AllCold, JarCached (changeset), AllWarm
- Add TxHash sampling across full chain for diversified query distribution

--- a/examples/changeset-bench/Cargo.toml
+++ b/examples/changeset-bench/Cargo.toml
@@ -14,6 +14,7 @@ reth-ethereum = { workspace = true, features = ["node"] }
 reth-stages = { workspace = true, optional = true }
 reth-db-api.workspace = true
 reth-provider.workspace = true
+reth-storage-api.workspace = true
 alloy-primitives.workspace = true
 rand = "0.8"
 clap = { workspace = true, features = ["derive"] }
