--- a/crates/stages/stages/Cargo.toml
+++ b/crates/stages/stages/Cargo.toml
@@ -122,7 +122,7 @@ test-utils = [
     "reth-evm-ethereum/test-utils",
 ]
 rocksdb = ["reth-provider/rocksdb"]
-edge = ["reth-provider/edge", "rocksdb"]
+edge = ["reth-provider/edge", "reth-db-common/edge", "rocksdb"]
 
 [[bench]]
 name = "criterion"
