--- a/crates/stages/stages/Cargo.toml
+++ b/crates/stages/stages/Cargo.toml
@@ -61,7 +61,7 @@ rayon.workspace = true
 num-traits.workspace = true
 tempfile = { workspace = true, optional = true }
 bincode.workspace = true
-reqwest = { workspace = true, default-features = false, features = ["rustls-tls-native-roots", "blocking"] }
+reqwest.workspace = true
 eyre.workspace = true
 
 [dev-dependencies]
