--- a/bin/reth-bench/Cargo.toml
+++ b/bin/reth-bench/Cargo.toml
@@ -9,6 +9,10 @@ repository.workspace = true
 description = "Benchmarking for ethereum nodes"
 default-run = "reth-bench"
 
+[lib]
+name = "reth_bench"
+path = "src/lib.rs"
+
 [lints]
 workspace = true
 
