feat(static-file): add incremental changeset offset storage infrastructure
Currently, changeset offsets (Vec<ChangesetOffset>) are stored inline in
SegmentHeader and fully rewritten on every commit. For segments with 500k+
blocks, this means ~8MB rewritten per commit even when appending a single
block.

This PR adds the infrastructure for incremental changeset offset storage:

1. ChangesetOffsetsMeta: Lightweight metadata struct (len + version) that
   will replace the inline Vec in SegmentHeader
2. ChangesetOffsetWriter: Append-only writer for the new .csoff sidecar file
3. ChangesetOffsetReader: O(1) random-access reader using fixed 16-byte records
4. CHANGESET_OFFSETS_FILE_EXTENSION constant for the new file type
5. Design doc explaining the migration strategy and crash consistency

Performance impact:
- Append: O(total_blocks) -> O(1) (16 bytes per block)
- Commit overhead: ~8MB for 500k blocks -> ~100 bytes (header only)
- Prune: O(remaining_blocks) -> O(1) (len update only)

Follow-up PRs will:
- Integrate the sidecar into SegmentHeader (replace Vec with Meta)
- Update StaticFileProviderRW commit/prune paths
- Add migration logic for existing segments

--- a/crates/static-file/types/Cargo.toml
+++ b/crates/static-file/types/Cargo.toml
@@ -24,6 +24,7 @@ strum = { workspace = true, features = ["derive"] }
 reth-nippy-jar.workspace = true
 serde_json.workspace = true
 insta.workspace = true
+tempfile.workspace = true
 
 [features]
 default = ["std"]
