--- a/crates/static-file/types/Cargo.toml
+++ b/crates/static-file/types/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 
 [dependencies]
 alloy-primitives.workspace = true
-tracing.workspace = true
+tracing = { workspace = true, optional = true }
 
 clap = { workspace = true, features = ["derive"], optional = true }
 fixed-map.workspace = true
@@ -36,6 +36,7 @@ std = [
     "strum/std",
     "serde_json/std",
     "fixed-map/std",
-    "tracing/std",
+    "dep:tracing",
+    "tracing?/std",
 ]
 clap = ["dep:clap"]
