--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -33,6 +33,7 @@ derive_more.workspace = true
 futures-util.workspace = true
 metrics = { workspace = true, optional = true }
 rayon = { workspace = true, optional = true }
+tracing.workspace = true
 
 [dev-dependencies]
 reth-ethereum-primitives.workspace = true
@@ -57,6 +58,7 @@ std = [
     "reth-storage-api/std",
     "reth-trie-common/std",
     "reth-ethereum-primitives/std",
+    "tracing/std",
 ]
 metrics = ["std", "dep:metrics", "dep:reth-metrics"]
 test-utils = [
