--- a/Cargo.toml
+++ b/Cargo.toml
@@ -487,10 +487,16 @@ revm-inspectors = "0.34.1"
 alloy-chains = { version = "0.2.5", default-features = false }
 alloy-dyn-abi = "1.5.2"
 alloy-eip2124 = { version = "0.2.0", default-features = false }
-alloy-eip7928 = { version = "0.3.0", default-features = false, features = ["rlp"] }
+alloy-eip7928 = { version = "0.3.0", default-features = false, features = [
+    "rlp",
+] }
 alloy-evm = { version = "0.27.0", default-features = false }
-alloy-primitives = { version = "1.5.0", default-features = false, features = ["map-foldhash"] }
-alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
+alloy-primitives = { version = "1.5.0", default-features = false, features = [
+    "map-foldhash",
+] }
+alloy-rlp = { version = "0.3.10", default-features = false, features = [
+    "core-net",
+] }
 alloy-sol-macro = "1.5.0"
 alloy-sol-types = { version = "1.5.0", default-features = false }
 alloy-trie = { version = "0.9.1", default-features = false }
@@ -504,10 +510,15 @@ alloy-genesis = { version = "1.5.2", default-features = false }
 alloy-json-rpc = { version = "1.5.2", default-features = false }
 alloy-network = { version = "1.5.2", default-features = false }
 alloy-network-primitives = { version = "1.5.2", default-features = false }
-alloy-provider = { version = "1.5.2", features = ["reqwest", "debug-api"], default-features = false }
+alloy-provider = { version = "1.5.2", features = [
+    "reqwest",
+    "debug-api",
+], default-features = false }
 alloy-pubsub = { version = "1.5.2", default-features = false }
 alloy-rpc-client = { version = "1.5.2", default-features = false }
-alloy-rpc-types = { version = "1.5.2", features = ["eth"], default-features = false }
+alloy-rpc-types = { version = "1.5.2", features = [
+    "eth",
+], default-features = false }
 alloy-rpc-types-admin = { version = "1.5.2", default-features = false }
 alloy-rpc-types-anvil = { version = "1.5.2", default-features = false }
 alloy-rpc-types-beacon = { version = "1.5.2", default-features = false }
@@ -521,7 +532,9 @@ alloy-serde = { version = "1.5.2", default-features = false }
 alloy-signer = { version = "1.5.2", default-features = false }
 alloy-signer-local = { version = "1.5.2", default-features = false }
 alloy-transport = { version = "1.5.2" }
-alloy-transport-http = { version = "1.5.2", features = ["reqwest-rustls-tls"], default-features = false }
+alloy-transport-http = { version = "1.5.2", features = [
+    "reqwest-rustls-tls",
+], default-features = false }
 alloy-transport-ipc = { version = "1.5.2", default-features = false }
 alloy-transport-ws = { version = "1.5.2", default-features = false }
 
@@ -540,7 +553,10 @@ either = { version = "1.15.0", default-features = false }
 arrayvec = { version = "0.7.6", default-features = false }
 aquamarine = "0.6"
 auto_impl = "1"
-backon = { version = "1.2", default-features = false, features = ["std-blocking-sleep", "tokio-sleep"] }
+backon = { version = "1.2", default-features = false, features = [
+    "std-blocking-sleep",
+    "tokio-sleep",
+] }
 bincode = "1.3"
 bitflags = "2.4"
 boyer-moore-magiclen = "0.2.16"
@@ -562,9 +578,13 @@ itertools = { version = "0.14", default-features = false }
 linked_hash_set = "0.1"
 lz4 = "1.28.1"
 modular-bitfield = "0.11.2"
-notify = { version = "8.0.0", default-features = false, features = ["macos_fsevent"] }
+notify = { version = "8.0.0", default-features = false, features = [
+    "macos_fsevent",
+] }
 nybbles = { version = "0.4.2", default-features = false }
-once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
+once_cell = { version = "1.19", default-features = false, features = [
+    "critical-section",
+] }
 parking_lot = "0.12"
 paste = "1.0"
 rand = "0.9"
@@ -647,7 +667,10 @@ proptest-arbitrary-interop = "0.1.0"
 # crypto
 enr = { version = "0.13", default-features = false }
 k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
-secp256k1 = { version = "0.30", default-features = false, features = ["global-context", "recovery"] }
+secp256k1 = { version = "0.30", default-features = false, features = [
+    "global-context",
+    "recovery",
+] }
 # rand 8 for secp256k1
 rand_08 = { package = "rand", version = "0.8" }
 
@@ -803,24 +826,24 @@ ipnet = "2.11"
 # =============================================================================
 
 # revm staging patches
-revm = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-bytecode = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-database = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-database-interface = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-state = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-context = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-context-interface = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-handler = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-inspector = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-op-revm = { git = "https://github.com/bluealloy/revm", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", branch = "staging" }
+revm = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-bytecode = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-database = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-database-interface = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-state = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-primitives = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-interpreter = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-precompile = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-context = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-context-interface = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-handler = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-inspector = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+op-revm = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/devnet2-fixes" }
+revm-inspectors = { git = "https://github.com/Rimeeeeee/revm-inspectors", branch = "staging" }
 
 # alloy-evm bal-devnet2 patches
-alloy-evm = { git = "https://github.com/alloy-rs/evm", branch = "bal-devnet2" }
-alloy-op-evm = { git = "https://github.com/alloy-rs/evm", branch = "bal-devnet2" }
+alloy-evm = { git = "https://github.com/Soubhik-10/evm", branch = "devnet2-fixes" }
+alloy-op-evm = { git = "https://github.com/Soubhik-10/evm", branch = "devnet2-fixes" }
 
 # alloy bal-devnet2 patches
 alloy-consensus = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
