perf: add ParallelBridgeCollected trait to replace par_bridge
Replace all par_bridge calls with a new utility extension method called
par_bridge_collected. This collects the iterator into a Vec first, then
calls par_iter on it.

This is better in some cases because par_bridge wraps the iterator in a
mutex, which can create contention if either the iterator's next() is
fast or the tasks that consume the items are fast.

--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -23,7 +23,7 @@ reth-evm = { workspace = true, features = ["metrics"] }
 reth-network-p2p.workspace = true
 reth-payload-builder.workspace = true
 reth-payload-primitives.workspace = true
-reth-primitives-traits.workspace = true
+reth-primitives-traits = { workspace = true, features = ["rayon"] }
 reth-ethereum-primitives.workspace = true
 reth-provider.workspace = true
 reth-prune.workspace = true
