--- a/crates/static-file/types/Cargo.toml
+++ b/crates/static-file/types/Cargo.toml
@@ -13,6 +13,7 @@ workspace = true
 
 [dependencies]
 alloy-primitives.workspace = true
+reth-stages-types.workspace = true
 
 clap = { workspace = true, features = ["derive"], optional = true }
 fixed-map.workspace = true
@@ -29,6 +30,7 @@ insta.workspace = true
 default = ["std"]
 std = [
     "alloy-primitives/std",
+    "reth-stages-types/std",
     "derive_more/std",
     "serde/std",
     "strum/std",
