--- a/crates/static-file/types/Cargo.toml
+++ b/crates/static-file/types/Cargo.toml
@@ -18,6 +18,7 @@ clap = { workspace = true, features = ["derive"], optional = true }
 fixed-map.workspace = true
 derive_more.workspace = true
 serde = { workspace = true, features = ["alloc", "derive"] }
+reth-stages-types.workspace = true
 strum = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
@@ -30,6 +31,7 @@ default = ["std"]
 std = [
     "alloy-primitives/std",
     "derive_more/std",
+    "reth-stages-types/std",
     "serde/std",
     "strum/std",
     "serde_json/std",
