perf: replace RwLock<HashMap/HashSet> with DashMap/DashSet
Replace RwLock-wrapped collections with DashMap/DashSet for better
concurrent access performance:

- transaction-pool/blobstore/mem.rs: RwLock<HashMap> -> DashMap
- transaction-pool/blobstore/disk.rs: RwLock<HashSet> -> DashSet
- net/dns/resolver.rs: RwLock<HashMap> -> DashMap
- storage/rpc-provider: RwLock<HashMap> -> DashMap
- storage/provider/overlay.rs: Arc<RwLock<HashMap>> -> Arc<DashMap>

Note: chain-state/in_memory.rs was not converted as it requires
atomic multi-lock acquisition for consistency.

--- a/crates/transaction-pool/Cargo.toml
+++ b/crates/transaction-pool/Cargo.toml
@@ -51,6 +51,7 @@ thiserror.workspace = true
 tracing.workspace = true
 rustc-hash.workspace = true
 schnellru.workspace = true
+dashmap = { workspace = true, features = ["inline"] }
 serde = { workspace = true, features = ["derive", "rc"] }
 serde_json.workspace = true
 bitflags.workspace = true
@@ -96,6 +97,7 @@ serde = [
     "reth-chain-state/serde",
     "reth-storage-api/serde",
     "revm/serde",
+    "dashmap/serde",
 ]
 test-utils = [
     "rand",
@@ -125,6 +127,7 @@ arbitrary = [
     "reth-ethereum-primitives/arbitrary",
     "revm-primitives/arbitrary",
     "revm/arbitrary",
+    "dashmap/arbitrary",
 ]
 
 [[bench]]
