--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -11,6 +11,7 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
+      - run: git fetch origin main
       - run: npm install -g @anthropic-ai/claude-code
       - uses: wevm/changelogs-rs/gen@master
         with:
