--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.head_ref }}
       - run: npm install -g @anthropic-ai/claude-code
       - uses: wevm/changelogs-rs/gen@master
         with:
