--- a/crates/primitives-traits/Cargo.toml
+++ b/crates/primitives-traits/Cargo.toml
@@ -102,22 +102,22 @@ test-utils = [
     "reth-chainspec/test-utils",
 ]
 arbitrary = [
-	"std",
-	"alloy-consensus/arbitrary",
-	"alloy-primitives/arbitrary",
-	"dep:arbitrary",
-	"dep:proptest",
-	"dep:proptest-arbitrary-interop",
-	"alloy-eips/arbitrary",
-	"revm-primitives/arbitrary",
-	"reth-codecs?/arbitrary",
-	"secp256k1?/global-context",
-	"secp256k1?/rand",
-	"op-alloy-consensus?/arbitrary",
-	"alloy-trie/arbitrary",
-	"reth-chainspec/arbitrary",
-	"alloy-rpc-types-eth?/arbitrary",
-	"dashmap?/arbitrary"
+    "std",
+    "alloy-consensus/arbitrary",
+    "alloy-primitives/arbitrary",
+    "dep:arbitrary",
+    "dep:proptest",
+    "dep:proptest-arbitrary-interop",
+    "alloy-eips/arbitrary",
+    "revm-primitives/arbitrary",
+    "reth-codecs?/arbitrary",
+    "secp256k1?/global-context",
+    "secp256k1?/rand",
+    "op-alloy-consensus?/arbitrary",
+    "alloy-trie/arbitrary",
+    "reth-chainspec/arbitrary",
+    "alloy-rpc-types-eth?/arbitrary",
+    "dashmap?/arbitrary",
 ]
 serde-bincode-compat = [
     "serde",
@@ -130,23 +130,23 @@ serde-bincode-compat = [
     "alloy-rpc-types-eth?/serde-bincode-compat",
 ]
 serde = [
-	"dep:serde",
-	"alloy-consensus/serde",
-	"alloy-eips/serde",
-	"alloy-primitives/serde",
-	"bytes/serde",
-	"rand/serde",
-	"reth-codecs?/serde",
-	"revm-primitives/serde",
-	"revm-primitives/serde",
-	"op-alloy-consensus?/serde",
-	"secp256k1?/serde",
-	"alloy-trie/serde",
-	"revm-bytecode/serde",
-	"revm-state/serde",
-	"rand_08/serde",
-	"alloy-rpc-types-eth?/serde",
-	"dashmap?/serde"
+    "dep:serde",
+    "alloy-consensus/serde",
+    "alloy-eips/serde",
+    "alloy-primitives/serde",
+    "bytes/serde",
+    "rand/serde",
+    "reth-codecs?/serde",
+    "revm-primitives/serde",
+    "revm-primitives/serde",
+    "op-alloy-consensus?/serde",
+    "secp256k1?/serde",
+    "alloy-trie/serde",
+    "revm-bytecode/serde",
+    "revm-state/serde",
+    "rand_08/serde",
+    "alloy-rpc-types-eth?/serde",
+    "dashmap?/serde",
 ]
 reth-codec = [
     "dep:reth-codecs",
