--- a/Cargo.toml
+++ b/Cargo.toml
@@ -484,14 +484,20 @@ revm-inspectors = "0.34.1"
 
 # eth
 alloy-dyn-abi = "1.5.4"
-alloy-primitives = { version = "1.5.4", default-features = false, features = ["map-foldhash"] }
+alloy-primitives = { version = "1.5.4", default-features = false, features = [
+    "map-foldhash",
+] }
 alloy-sol-types = { version = "1.5.4", default-features = false }
 
 alloy-chains = { version = "0.2.5", default-features = false }
 alloy-eip2124 = { version = "0.2.0", default-features = false }
-alloy-eip7928 = { version = "0.3.0", default-features = false, features = ["rlp"] }
+alloy-eip7928 = { version = "0.3.0", default-features = false, features = [
+    "rlp",
+] }
 alloy-evm = { version = "0.27.0", default-features = false }
-alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
+alloy-rlp = { version = "0.3.10", default-features = false, features = [
+    "core-net",
+] }
 alloy-trie = { version = "0.9.1", default-features = false }
 
 alloy-hardforks = "0.4.5"
@@ -503,10 +509,15 @@ alloy-genesis = { version = "1.5.2", default-features = false }
 alloy-json-rpc = { version = "1.5.2", default-features = false }
 alloy-network = { version = "1.5.2", default-features = false }
 alloy-network-primitives = { version = "1.5.2", default-features = false }
-alloy-provider = { version = "1.5.2", features = ["reqwest", "debug-api"], default-features = false }
+alloy-provider = { version = "1.5.2", features = [
+    "reqwest",
+    "debug-api",
+], default-features = false }
 alloy-pubsub = { version = "1.5.2", default-features = false }
 alloy-rpc-client = { version = "1.5.2", default-features = false }
-alloy-rpc-types = { version = "1.5.2", features = ["eth"], default-features = false }
+alloy-rpc-types = { version = "1.5.2", features = [
+    "eth",
+], default-features = false }
 alloy-rpc-types-admin = { version = "1.5.2", default-features = false }
 alloy-rpc-types-anvil = { version = "1.5.2", default-features = false }
 alloy-rpc-types-beacon = { version = "1.5.2", default-features = false }
@@ -520,7 +531,9 @@ alloy-serde = { version = "1.5.2", default-features = false }
 alloy-signer = { version = "1.5.2", default-features = false }
 alloy-signer-local = { version = "1.5.2", default-features = false }
 alloy-transport = { version = "1.5.2" }
-alloy-transport-http = { version = "1.5.2", features = ["reqwest-rustls-tls"], default-features = false }
+alloy-transport-http = { version = "1.5.2", features = [
+    "reqwest-rustls-tls",
+], default-features = false }
 alloy-transport-ipc = { version = "1.5.2", default-features = false }
 alloy-transport-ws = { version = "1.5.2", default-features = false }
 
@@ -539,7 +552,10 @@ either = { version = "1.15.0", default-features = false }
 arrayvec = { version = "0.7.6", default-features = false }
 aquamarine = "0.6"
 auto_impl = "1"
-backon = { version = "1.2", default-features = false, features = ["std-blocking-sleep", "tokio-sleep"] }
+backon = { version = "1.2", default-features = false, features = [
+    "std-blocking-sleep",
+    "tokio-sleep",
+] }
 bincode = "1.3"
 bitflags = "2.4"
 boyer-moore-magiclen = "0.2.16"
@@ -561,9 +577,13 @@ itertools = { version = "0.14", default-features = false }
 linked_hash_set = "0.1"
 lz4 = "1.28.1"
 modular-bitfield = "0.13.1"
-notify = { version = "8.0.0", default-features = false, features = ["macos_fsevent"] }
+notify = { version = "8.0.0", default-features = false, features = [
+    "macos_fsevent",
+] }
 nybbles = { version = "0.4.2", default-features = false }
-once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
+once_cell = { version = "1.19", default-features = false, features = [
+    "critical-section",
+] }
 parking_lot = "0.12"
 paste = "1.0"
 rand = "0.9"
@@ -620,7 +640,11 @@ futures-util = { version = "0.3", default-features = false }
 hyper = "1.3"
 hyper-util = "0.1.5"
 pin-project = "1.0.12"
-reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "stream"] }
+reqwest = { version = "0.12", default-features = false, features = [
+    "rustls-tls",
+    "rustls-tls-native-roots",
+    "stream",
+] }
 tracing-futures = "0.2"
 tower = "0.5"
 tower-http = "0.6"
@@ -645,7 +669,10 @@ proptest-arbitrary-interop = "0.1.0"
 # crypto
 enr = { version = "0.13", default-features = false }
 k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
-secp256k1 = { version = "0.30", default-features = false, features = ["global-context", "recovery"] }
+secp256k1 = { version = "0.30", default-features = false, features = [
+    "global-context",
+    "recovery",
+] }
 # rand 8 for secp256k1
 rand_08 = { package = "rand", version = "0.8" }
 
@@ -817,8 +844,8 @@ op-revm = { git = "https://github.com/bluealloy/revm", branch = "main" }
 revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", branch = "staging" }
 
 # alloy-evm bal-devnet2 patches
-alloy-evm = { git = "https://github.com/Soubhik-10/evm", branch = "devnet2-fixes" }
-alloy-op-evm = { git = "https://github.com/Soubhik-10/evm", branch = "devnet2-fixes" }
+alloy-evm = { git = "https://github.com/Soubhik-10/evm", branch = "test-receipt" }
+alloy-op-evm = { git = "https://github.com/Soubhik-10/evm", branch = "test-receipt" }
 
 # alloy bal-devnet2 patches
 alloy-consensus = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
