--- a/crates/trie/sparse/Cargo.toml
+++ b/crates/trie/sparse/Cargo.toml
@@ -39,6 +39,7 @@ reth-testing-utils.workspace = true
 reth-trie = { workspace = true, features = ["test-utils"] }
 reth-trie-common = { workspace = true, features = ["test-utils", "arbitrary"] }
 reth-trie-db = { workspace = true, features = ["test-utils"] }
+reth-trie-sparse-parallel.workspace = true
 reth-tracing.workspace = true
 
 arbitrary.workspace = true
@@ -84,8 +85,4 @@ arbitrary = [
 
 [[bench]]
 name = "root"
-harness = false
-
-[[bench]]
-name = "rlp_node"
 harness = false
