--- a/crates/ethereum/evm/Cargo.toml
+++ b/crates/ethereum/evm/Cargo.toml
@@ -56,6 +56,7 @@ std = [
     "revm/std",
     "reth-ethereum-primitives/std",
     "derive_more?/std",
+    "tracing/std",
     "alloy-rpc-types-engine/std",
     "reth-storage-errors/std",
 ]
