feat(edge): fine-grained 7-thread parallel writes + metrics + Grafana dashboard
- Add parallel_writes.rs with single-DBI write methods (1 DBI = 1 subtxn = 1 thread)
- Upgrade save_blocks edge mode from 3 to 7 parallel threads:
  - PlainAccountState, Bytecodes, PlainStorageState
  - HashedAccounts, HashedStorages
  - AccountsTrie, StoragesTrie
- Add preprocessing phase timing (merge, sort, convert before spawning)
- Add per-table edge mode metrics with histograms + gauges
- Add Grafana dashboard: etc/grafana/dashboards/reth-edge-mode.json
- Add 'edge' feature flag for gating edge mode tests

Stress test results (60s, 1000 accounts, 200 slots):
- 21 iterations, 105 blocks, 21M storage entries
- 26,589 pages allocated (~104 MB)
- Read verification passed, NO CORRUPTION DETECTED

--- a/crates/storage/provider/Cargo.toml
+++ b/crates/storage/provider/Cargo.toml
@@ -87,8 +87,8 @@ rand.workspace = true
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
 
 [features]
+edge = ["reth-storage-api/edge", "rocksdb", "revm-state"]
 rocksdb = ["reth-storage-api/rocksdb", "dep:rocksdb"]
-edge = ["rocksdb"]
 test-utils = [
     "reth-db/test-utils",
     "reth-nippy-jar/test-utils",
