fix: propagate edge feature to reth-provider in cli/commands
The edge feature was not propagating to reth-provider from cli/commands,
causing #[cfg(feature = "edge")] parallel writes code to be compiled out.

Added reth-provider/edge to the edge feature list.

Also added debug eprintln to verify parallel path is entered.

--- a/crates/cli/commands/Cargo.toml
+++ b/crates/cli/commands/Cargo.toml
@@ -134,4 +134,4 @@ arbitrary = [
 ]
 
 rocksdb = ["reth-db-common/rocksdb", "reth-stages/rocksdb", "reth-provider/rocksdb", "reth-prune/rocksdb"]
-edge = ["rocksdb"]
+edge = ["rocksdb", "reth-db-common/edge", "reth-provider/edge"]
