--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -68,12 +68,12 @@ tracing.workspace = true
 derive_more.workspace = true
 parking_lot.workspace = true
 crossbeam-channel.workspace = true
+reth-tracing.workspace = true
 
 # optional deps for test-utils
 reth-prune-types = { workspace = true, optional = true }
 reth-stages = { workspace = true, optional = true }
 reth-static-file = { workspace = true, optional = true }
-reth-tracing = { workspace = true, optional = true }
 
 [dev-dependencies]
 # reth
@@ -132,7 +132,6 @@ test-utils = [
     "reth-stages-api/test-utils",
     "reth-stages/test-utils",
     "reth-static-file",
-    "reth-tracing",
     "reth-trie/test-utils",
     "reth-trie-common/test-utils",
     "reth-trie-db/test-utils",
