--- a/crates/tasks/Cargo.toml
+++ b/crates/tasks/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 
 [dependencies]
 # async
-tokio = { workspace = true, features = ["sync", "rt"] }
+tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread"] }
 tracing-futures.workspace = true
 futures-util = { workspace = true, features = ["std"] }
 
