refactor: replace GlobalRuntime singleton with Runtime DI
Replace the pub static RUNTIME: GlobalRuntime singleton in reth-tasks
with a local Runtime(Arc<RuntimeInner>) type that is passed via
dependency injection. Runtime is stored in structs and cloned through
the call chain rather than accessed globally.

- Runtime wraps Arc<RuntimeInner> for cheap cloning
- RuntimeBuilder for constructing with custom pool sizes
- Runtime::Default gated behind #[cfg(any(test, feature = "test-utils"))]
- Runtime::test() and test_with_handle() for test ergonomics
- TaskExecutor is now a type alias for Runtime
- ProviderFactory and DatabaseProvider store runtime
- BasicEngineValidator passes runtime to PayloadProcessor and
  ParallelStateRoot
- WorkloadExecutor wraps Runtime, no longer implements Default
- CLI commands use Runtime::current() from GLOBAL_RUNTIME OnceLock

--- a/crates/tasks/Cargo.toml
+++ b/crates/tasks/Cargo.toml
@@ -36,3 +36,4 @@ tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "time",
 
 [features]
 rayon = ["dep:rayon", "pin-project"]
+test-utils = []
