--- a/examples/rpc-db/Cargo.toml
+++ b/examples/rpc-db/Cargo.toml
@@ -9,5 +9,6 @@ license.workspace = true
 futures.workspace = true
 jsonrpsee.workspace = true
 reth-ethereum = { workspace = true, features = ["test-utils", "node", "provider", "pool", "network", "rpc"] }
+reth-tasks.workspace = true
 tokio = { workspace = true, features = ["full"] }
 eyre.workspace = true
