chore(storage): rm storage settings, use only one

--- a/crates/storage/db-api/Cargo.toml
+++ b/crates/storage/db-api/Cargo.toml
@@ -35,6 +35,7 @@ modular-bitfield.workspace = true
 roaring.workspace = true
 parity-scale-codec = { workspace = true, features = ["bytes"] }
 serde = { workspace = true, default-features = false }
+serde_json.workspace = true
 
 # metrics
 metrics.workspace = true
