--- a/Dockerfile.depot
+++ b/Dockerfile.depot
@@ -59,6 +59,7 @@ RUN --mount=type=secret,id=DEPOT_TOKEN,env=SCCACHE_WEBDAV_TOKEN \
         export RUSTFLAGS="-C target-cpu=x86-64-v3 -C target-feature=+pclmulqdq"; \
     fi && \
     cargo build --profile $BUILD_PROFILE --features "$FEATURES" --locked --bin $BINARY --manifest-path $MANIFEST_PATH/Cargo.toml && \
+    pgrep -a sccache || echo "sccache server is NOT running (likely OOM-killed)" && \
     sccache --show-stats
 
 # Copy binary to a known location (ARG not resolved in COPY)
